--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
     <main class="about">
       <p>web pages cl thpages clell  an essential skill for a web developer. Using HTML, CSS, and responsive design, you'll create a mobile-first web page with a layout that adjusts to fit mobile phones, tablets, and desktop displaysat look and function well on multiple screen sizes is an essential skill for a web developer. Using HTML, CSS, and responsive design, you'll create a mobile-first web page with a layout that adjusts to fit mobile phones, tablets, and desktop displays pages cl that look and function well on multiple screen sizes is an essential skill for a web developer. Using HTML, CSS, and responsive design, you'll create a mobile-first web page with a layout that adjusts to fit mobile phones, tablets, and desktop displays.</p>
-        <div class="profile-pic"><img src="/img/1d.jpg"</div>
+        <div class="profile-pic"><img src="./img/1d.jpg"</div>
     </main>
    
     <div class="portfolio">
